--- a/index.html
+++ b/index.html
@@ -1,12 +1,411 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Les petits plats</title>
-</head>
-<body>
-    <header><img src="./assets/images/logoPetitsPlats.png" alt="Logo 'Les petits plats'"></header>
-</body>
+  </head>
+
+  <body>
+    <header>
+      <div>
+        <img
+          src="./assets/images/logoPetitsPlats.png"
+          alt="Logo 'Les petits plats'"
+        />
+      </div>
+      <div>
+        <form>
+          <input
+            type="text"
+            placeholder="Rechercher une recette"
+            name="searchRecipe"
+          />
+          <button type="submit">
+            <svg
+              width="33"
+              height="33"
+              viewBox="0 0 33 33"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M23.4167 20.6667H21.9683L21.455 20.1717C23.2517 18.0817 24.3333 15.3683 24.3333 12.4167C24.3333 5.835 18.9983 0.5 12.4167 0.5C5.835 0.5 0.5 5.835 0.5 12.4167C0.5 18.9983 5.835 24.3333 12.4167 24.3333C15.3683 24.3333 18.0817 23.2517 20.1717 21.455L20.6667 21.9683V23.4167L29.8333 32.565L32.565 29.8333L23.4167 20.6667ZM12.4167 20.6667C7.85167 20.6667 4.16667 16.9817 4.16667 12.4167C4.16667 7.85167 7.85167 4.16667 12.4167 4.16667C16.9817 4.16667 20.6667 7.85167 20.6667 12.4167C20.6667 16.9817 16.9817 20.6667 12.4167 20.6667Z"
+                fill="black"
+              />
+            </svg>
+          </button>
+        </form>
+      </div>
+      <div>
+        <div>
+          <div>
+            <p>example</p>
+            <svg
+              width="20"
+              height="20"
+              viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z"
+              />
+            </svg>
+          </div>
+        </div>
+        <div>
+          <div>
+            <div>
+              <p>Ingredients</p>
+              <input
+                type="text"
+                placeholder="Rechercher un ingrédient"
+                name="searchIngredient"
+              />
+              <svg
+                width="16"
+                height="11"
+                viewBox="0 0 16 11"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z"
+                />
+              </svg>
+            </div>
+            <div>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+            </div>
+          </div>
+          <div>
+            <div>
+              <p>Appareils</p>
+              <input
+                type="text"
+                placeholder="Rechercher un appareil"
+                name="searchDevice"
+              />
+              <svg
+                width="16"
+                height="11"
+                viewBox="0 0 16 11"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z"
+                />
+              </svg>
+            </div>
+            <div>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+            </div>
+          </div>
+          <div>
+            <div>
+              <p>Ustensiles</p>
+              <input
+                type="text"
+                placeholder="Rechercher un ustensile"
+                name="searchUstensil"
+              />
+              <svg
+                width="16"
+                height="11"
+                viewBox="0 0 16 11"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z"
+                />
+              </svg>
+            </div>
+            <div>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+              <p>Example</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div>
+        <figure>
+          <div>
+            <img
+              class=""
+              src="./assets/images/fillRecipeImg.png"
+              alt="image of a recipe"
+            />
+          </div>
+          <figcaption>
+            <div>
+              <p>titre recette</p>
+              <div>
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_4_71)">
+                    <path
+                      d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7H11V13L16.2 16.2L17 14.9L12.5 12.2V7Z"
+                      fill="black"
+                    />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_4_71">
+                      <rect width="24" height="24" fill="white" />
+                    </clipPath>
+                  </defs>
+                </svg>
+
+                <p>temps nécessaire</p>
+              </div>
+            </div>
+            <div>
+              <div>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
+                cum consectetur! Neque aliquid amet delectus laudantium itaque
+                suscipit, enim doloribus iusto praesentium voluptate
+                perspiciatis aspernatur quas dolorem placeat deleniti ex.
+              </p>
+            </div>
+          </figcaption>
+          <figcaption>
+            <div>
+              <p>titre recette</p>
+              <div>
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_4_71)">
+                    <path
+                      d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7H11V13L16.2 16.2L17 14.9L12.5 12.2V7Z"
+                      fill="black"
+                    />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_4_71">
+                      <rect width="24" height="24" fill="white" />
+                    </clipPath>
+                  </defs>
+                </svg>
+
+                <p>temps nécessaire</p>
+              </div>
+            </div>
+            <div>
+              <div>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
+                cum consectetur! Neque aliquid amet delectus laudantium itaque
+                suscipit, enim doloribus iusto praesentium voluptate
+                perspiciatis aspernatur quas dolorem placeat deleniti ex.
+              </p>
+            </div>
+          </figcaption>
+          <figcaption>
+            <div>
+              <p>titre recette</p>
+              <div>
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_4_71)">
+                    <path
+                      d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7H11V13L16.2 16.2L17 14.9L12.5 12.2V7Z"
+                      fill="black"
+                    />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_4_71">
+                      <rect width="24" height="24" fill="white" />
+                    </clipPath>
+                  </defs>
+                </svg>
+
+                <p>temps nécessaire</p>
+              </div>
+            </div>
+            <div>
+              <div>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
+                cum consectetur! Neque aliquid amet delectus laudantium itaque
+                suscipit, enim doloribus iusto praesentium voluptate
+                perspiciatis aspernatur quas dolorem placeat deleniti ex.
+              </p>
+            </div>
+          </figcaption>
+          <figcaption>
+            <div>
+              <p>titre recette</p>
+              <div>
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_4_71)">
+                    <path
+                      d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7H11V13L16.2 16.2L17 14.9L12.5 12.2V7Z"
+                      fill="black"
+                    />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_4_71">
+                      <rect width="24" height="24" fill="white" />
+                    </clipPath>
+                  </defs>
+                </svg>
+
+                <p>temps nécessaire</p>
+              </div>
+            </div>
+            <div>
+              <div>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
+                cum consectetur! Neque aliquid amet delectus laudantium itaque
+                suscipit, enim doloribus iusto praesentium voluptate
+                perspiciatis aspernatur quas dolorem placeat deleniti ex.
+              </p>
+            </div>
+          </figcaption>
+          <figcaption>
+            <div>
+              <p>titre recette</p>
+              <div>
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_4_71)">
+                    <path
+                      d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7H11V13L16.2 16.2L17 14.9L12.5 12.2V7Z"
+                      fill="black"
+                    />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_4_71">
+                      <rect width="24" height="24" fill="white" />
+                    </clipPath>
+                  </defs>
+                </svg>
+
+                <p>temps nécessaire</p>
+              </div>
+            </div>
+            <div>
+              <div>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+                <p><span>example:</span>si</p>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
+                cum consectetur! Neque aliquid amet delectus laudantium itaque
+                suscipit, enim doloribus iusto praesentium voluptate
+                perspiciatis aspernatur quas dolorem placeat deleniti ex.
+              </p>
+            </div>
+          </figcaption>
+        </figure>
+      </div>
+    </main>
+  </body>
 </html>
