--- a/index.html
+++ b/index.html
@@ -4,43 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
     <title>Les petits plats</title>
   </head>
 
   <body>
     <header>
-      <div>
+      <div class="header__block-logo">
         <img
+          class="header__logo"
           src="./assets/images/logoPetitsPlats.png"
           alt="Logo 'Les petits plats'"
         />
       </div>
-      <div>
-        <form>
+      <div class="header__block-searchbar">
+        <form class="header__searchbar">
           <input
+            class="header__searchbar-input"
             type="text"
             placeholder="Rechercher une recette"
             name="searchRecipe"
           />
-          <button type="submit">
+          <button class="header__searchbar-btn" type="submit">
             <svg
               width="33"
               height="33"
               viewBox="0 0 33 33"
-              fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
               <path
                 d="M23.4167 20.6667H21.9683L21.455 20.1717C23.2517 18.0817 24.3333 15.3683 24.3333 12.4167C24.3333 5.835 18.9983 0.5 12.4167 0.5C5.835 0.5 0.5 5.835 0.5 12.4167C0.5 18.9983 5.835 24.3333 12.4167 24.3333C15.3683 24.3333 18.0817 23.2517 20.1717 21.455L20.6667 21.9683V23.4167L29.8333 32.565L32.565 29.8333L23.4167 20.6667ZM12.4167 20.6667C7.85167 20.6667 4.16667 16.9817 4.16667 12.4167C4.16667 7.85167 7.85167 4.16667 12.4167 4.16667C16.9817 4.16667 20.6667 7.85167 20.6667 12.4167C20.6667 16.9817 16.9817 20.6667 12.4167 20.6667Z"
-                fill="black"
               />
             </svg>
           </button>
         </form>
       </div>
-      <div>
-        <div>
-          <div>
+      <div class="header__block-advanced-research">
+        <div class="header__block-tag">
+          <div class="header__tag">
             <p>example</p>
             <svg
               width="20"
@@ -54,9 +55,9 @@
             </svg>
           </div>
         </div>
-        <div>
-          <div>
-            <div>
+        <div class="header__block-tag-selector">
+          <div class="header__tag-selector">
+            <div class="header__tag-researcher">
               <p>Ingredients</p>
               <input
                 type="text"
@@ -74,7 +75,7 @@
                 />
               </svg>
             </div>
-            <div>
+            <div class="header_tag-choice">
               <p>Example</p>
               <p>Example</p>
               <p>Example</p>
@@ -97,13 +98,14 @@
               <p>Example</p>
             </div>
           </div>
-          <div>
-            <div>
+        <div class="header__block-tag-selector">
+          <div class="header__tag-selector">
+            <div class="header__tag-researcher">
               <p>Appareils</p>
               <input
                 type="text"
                 placeholder="Rechercher un appareil"
-                name="searchDevice"
+                name="searchIngredient"
               />
               <svg
                 width="16"
@@ -116,7 +118,7 @@
                 />
               </svg>
             </div>
-            <div>
+            <div class="header_tag-choice">
               <p>Example</p>
               <p>Example</p>
               <p>Example</p>
@@ -139,13 +141,14 @@
               <p>Example</p>
             </div>
           </div>
-          <div>
-            <div>
+        <div class="header__block-tag-selector">
+          <div class="header__tag-selector">
+            <div class="header__tag-researcher">
               <p>Ustensiles</p>
               <input
                 type="text"
                 placeholder="Rechercher un ustensile"
-                name="searchUstensil"
+                name="searchIngredient"
               />
               <svg
                 width="16"
@@ -158,7 +161,7 @@
                 />
               </svg>
             </div>
-            <div>
+            <div class="header_tag-choice">
               <p>Example</p>
               <p>Example</p>
               <p>Example</p>
@@ -185,17 +188,17 @@
       </div>
     </header>
     <main>
-      <div>
-        <figure>
-          <div>
+      <div class="main__block-recipe-cards">
+        <figure class="main__recipe-card">
+          <div class="main__recipe-block-img">
             <img
-              class=""
+              class="main__recipe-img"
               src="./assets/images/fillRecipeImg.png"
               alt="image of a recipe"
             />
           </div>
-          <figcaption>
-            <div>
+          <figcaption class="main__recipe-caption">
+            <div class="main__recipe-title&time">
               <p>titre recette</p>
               <div>
                 <svg
@@ -218,57 +221,15 @@
                   </defs>
                 </svg>
 
-                <p>temps nécessaire</p>
+                <p>20 min</p>
               </div>
             </div>
-            <div>
-              <div>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-              </div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
-                cum consectetur! Neque aliquid amet delectus laudantium itaque
-                suscipit, enim doloribus iusto praesentium voluptate
-                perspiciatis aspernatur quas dolorem placeat deleniti ex.
-              </p>
-            </div>
-          </figcaption>
-          <figcaption>
-            <div>
-              <p>titre recette</p>
-              <div>
-                <svg
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <g clip-path="url(#clip0_4_71)">
-                    <path
-                      d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7H11V13L16.2 16.2L17 14.9L12.5 12.2V7Z"
-                      fill="black"
-                    />
-                  </g>
-                  <defs>
-                    <clipPath id="clip0_4_71">
-                      <rect width="24" height="24" fill="white" />
-                    </clipPath>
-                  </defs>
-                </svg>
-
-                <p>temps nécessaire</p>
-              </div>
-            </div>
-            <div>
-              <div>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
+            <div class="main__recipe-ingredients&description">
+              <div class="main__recipe-ingredients">
+                <p><span>example:</span> si</p>
+                <p><span>example:</span> si</p>
+                <p><span>example:</span> si</p>
+                <p><span>example:</span> si</p>
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
@@ -278,133 +239,6 @@
               </p>
             </div>
           </figcaption>
-          <figcaption>
-            <div>
-              <p>titre recette</p>
-              <div>
-                <svg
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <g clip-path="url(#clip0_4_71)">
-                    <path
-                      d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7H11V13L16.2 16.2L17 14.9L12.5 12.2V7Z"
-                      fill="black"
-                    />
-                  </g>
-                  <defs>
-                    <clipPath id="clip0_4_71">
-                      <rect width="24" height="24" fill="white" />
-                    </clipPath>
-                  </defs>
-                </svg>
-
-                <p>temps nécessaire</p>
-              </div>
-            </div>
-            <div>
-              <div>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-              </div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
-                cum consectetur! Neque aliquid amet delectus laudantium itaque
-                suscipit, enim doloribus iusto praesentium voluptate
-                perspiciatis aspernatur quas dolorem placeat deleniti ex.
-              </p>
-            </div>
-          </figcaption>
-          <figcaption>
-            <div>
-              <p>titre recette</p>
-              <div>
-                <svg
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <g clip-path="url(#clip0_4_71)">
-                    <path
-                      d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7H11V13L16.2 16.2L17 14.9L12.5 12.2V7Z"
-                      fill="black"
-                    />
-                  </g>
-                  <defs>
-                    <clipPath id="clip0_4_71">
-                      <rect width="24" height="24" fill="white" />
-                    </clipPath>
-                  </defs>
-                </svg>
-
-                <p>temps nécessaire</p>
-              </div>
-            </div>
-            <div>
-              <div>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-              </div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
-                cum consectetur! Neque aliquid amet delectus laudantium itaque
-                suscipit, enim doloribus iusto praesentium voluptate
-                perspiciatis aspernatur quas dolorem placeat deleniti ex.
-              </p>
-            </div>
-          </figcaption>
-          <figcaption>
-            <div>
-              <p>titre recette</p>
-              <div>
-                <svg
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <g clip-path="url(#clip0_4_71)">
-                    <path
-                      d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7H11V13L16.2 16.2L17 14.9L12.5 12.2V7Z"
-                      fill="black"
-                    />
-                  </g>
-                  <defs>
-                    <clipPath id="clip0_4_71">
-                      <rect width="24" height="24" fill="white" />
-                    </clipPath>
-                  </defs>
-                </svg>
-
-                <p>temps nécessaire</p>
-              </div>
-            </div>
-            <div>
-              <div>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-                <p><span>example:</span>si</p>
-              </div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
-                cum consectetur! Neque aliquid amet delectus laudantium itaque
-                suscipit, enim doloribus iusto praesentium voluptate
-                perspiciatis aspernatur quas dolorem placeat deleniti ex.
-              </p>
-            </div>
-          </figcaption>
-        </figure>
       </div>
     </main>
   </body>
