Add some data set to be used for style

--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
           />
           <button class="header__searchbar-btn" type="submit">
             <svg
-              width="33"
-              height="33"
               viewBox="0 0 33 33"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -41,11 +39,9 @@
       </div>
       <div class="header__block-advanced-research">
         <div class="header__block-tag">
-          <div class="header__tag">
+          <div class="header__tag" data-tag="ingredient">
             <p>example</p>
             <svg
-              width="20"
-              height="20"
               viewBox="0 0 20 20"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -56,7 +52,7 @@
           </div>
         </div>
         <div class="header__block-tag-selector">
-          <div class="header__tag-selector">
+          <div class="header__tag-selector" data-tag="ingredient">
             <div class="header__tag-researcher">
               <p>Ingredients</p>
               <input
@@ -98,7 +94,7 @@
               <p>Example</p>
             </div>
           </div>
-        <div class="header__block-tag-selector">
+        <div class="header__block-tag-selector" data-tag="device">
           <div class="header__tag-selector">
             <div class="header__tag-researcher">
               <p>Appareils</p>
@@ -141,7 +137,7 @@
               <p>Example</p>
             </div>
           </div>
-        <div class="header__block-tag-selector">
+        <div class="header__block-tag-selector" data-tag="ustensil">
           <div class="header__tag-selector">
             <div class="header__tag-researcher">
               <p>Ustensiles</p>
