Add style to header

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
             name="searchRecipe"
           />
           <button class="header__searchbar-btn" type="submit">
-            <svg
-              viewBox="0 0 33 33"
-              xmlns="http://www.w3.org/2000/svg"
-            >
+            <svg viewBox="0 0 33 33" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M23.4167 20.6667H21.9683L21.455 20.1717C23.2517 18.0817 24.3333 15.3683 24.3333 12.4167C24.3333 5.835 18.9983 0.5 12.4167 0.5C5.835 0.5 0.5 5.835 0.5 12.4167C0.5 18.9983 5.835 24.3333 12.4167 24.3333C15.3683 24.3333 18.0817 23.2517 20.1717 21.455L20.6667 21.9683V23.4167L29.8333 32.565L32.565 29.8333L23.4167 20.6667ZM12.4167 20.6667C7.85167 20.6667 4.16667 16.9817 4.16667 12.4167C4.16667 7.85167 7.85167 4.16667 12.4167 4.16667C16.9817 4.16667 20.6667 7.85167 20.6667 12.4167C20.6667 16.9817 16.9817 20.6667 12.4167 20.6667Z"
               />
@@ -41,10 +38,15 @@
         <div class="header__block-tag">
           <div class="header__tag" data-tag="ingredient">
             <p>example</p>
-            <svg
-              viewBox="0 0 20 20"
-              xmlns="http://www.w3.org/2000/svg"
-            >
+            <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z"
+              />
+            </svg>
+          </div>
+          <div class="header__tag" data-tag="ingredient">
+            <p>example</p>
+            <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M12.59 6L10 8.59L7.41 6L6 7.41L8.59 10L6 12.59L7.41 14L10 11.41L12.59 14L14 12.59L11.41 10L14 7.41L12.59 6ZM10 0C4.47 0 0 4.47 0 10C0 15.53 4.47 20 10 20C15.53 20 20 15.53 20 10C20 4.47 15.53 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z"
               />
@@ -61,8 +63,6 @@
                 name="searchIngredient"
               />
               <svg
-                width="16"
-                height="11"
                 viewBox="0 0 16 11"
                 xmlns="http://www.w3.org/2000/svg"
               >
@@ -71,31 +71,46 @@
                 />
               </svg>
             </div>
-            <div class="header_tag-choice">
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
+            <div class="header__tag-choice--display">
+              <div class="header__tag-choice">
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+              </div>
             </div>
           </div>
-        <div class="header__block-tag-selector" data-tag="device">
-          <div class="header__tag-selector">
+          <div class="header__tag-selector" data-tag="device">
             <div class="header__tag-researcher">
               <p>Appareils</p>
               <input
@@ -114,31 +129,16 @@
                 />
               </svg>
             </div>
-            <div class="header_tag-choice">
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
+            <div class="header__tag-choice--display">
+              <div class="header__tag-choice">
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+              </div>
             </div>
           </div>
-        <div class="header__block-tag-selector" data-tag="ustensil">
-          <div class="header__tag-selector">
+          <div class="header__tag-selector" data-tag="ustensil">
             <div class="header__tag-researcher">
               <p>Ustensiles</p>
               <input
@@ -157,27 +157,32 @@
                 />
               </svg>
             </div>
-            <div class="header_tag-choice">
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
-              <p>Example</p>
+            <div class="header__tag-choice--display">
+              <div class="header__tag-choice">
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+                <p>Example</p>
+              </div>
             </div>
           </div>
         </div>
@@ -235,6 +240,7 @@
               </p>
             </div>
           </figcaption>
+        </figure>
       </div>
     </main>
   </body>
