--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
         <div class="header__block-tag-selector">
           <div class="header__tag-selector" data-tag="ingredient">
             <div class="header__tag-researcher">
-              <p>Ingredients</p>
+              <p class="">Ingredients</p>
               <input
+                class=""
                 type="text"
                 placeholder="Rechercher un ingrédient"
                 name="searchIngredient"
               />
               <svg
+                class=""
                 viewBox="0 0 16 11"
                 xmlns="http://www.w3.org/2000/svg"
               >
@@ -199,12 +201,10 @@
             />
           </div>
           <figcaption class="main__recipe-caption">
-            <div class="main__recipe-title&time">
+            <div class="main__recipe-titlextime">
               <p>titre recette</p>
-              <div>
+              <div class="main__recipe-time">
                 <svg
-                  width="24"
-                  height="24"
                   viewBox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
@@ -215,24 +215,147 @@
                       fill="black"
                     />
                   </g>
-                  <defs>
-                    <clipPath id="clip0_4_71">
-                      <rect width="24" height="24" fill="white" />
-                    </clipPath>
-                  </defs>
                 </svg>
-
                 <p>20 min</p>
               </div>
             </div>
-            <div class="main__recipe-ingredients&description">
+            <div class="main__recipe-ingredientsxdescription">
               <div class="main__recipe-ingredients">
-                <p><span>example:</span> si</p>
+                <p><span>example:</span> siaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
                 <p><span>example:</span> si</p>
                 <p><span>example:</span> si</p>
                 <p><span>example:</span> si</p>
               </div>
-              <p>
+              <p class="main__recipe-description">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
+                cum consectetur! Neque aliquid amet delectus laudantium itaque
+                suscipit, enim doloribus iusto praesentium voluptate
+                perspiciatis aspernatur quas dolorem placeat deleniti ex.
+              </p>
+            </div>
+          </figcaption>
+        </figure>
+        <figure class="main__recipe-card">
+          <div class="main__recipe-block-img">
+            <img
+              class="main__recipe-img"
+              src="./assets/images/fillRecipeImg.png"
+              alt="image of a recipe"
+            />
+          </div>
+          <figcaption class="main__recipe-caption">
+            <div class="main__recipe-titlextime">
+              <p>titre recette</p>
+              <div class="main__recipe-time">
+                <svg
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_4_71)">
+                    <path
+                      d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7H11V13L16.2 16.2L17 14.9L12.5 12.2V7Z"
+                      fill="black"
+                    />
+                  </g>
+                </svg>
+                <p>20 min</p>
+              </div>
+            </div>
+            <div class="main__recipe-ingredientsxdescription">
+              <div class="main__recipe-ingredients">
+                <p><span>example:</span> siaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                <p><span>example:</span> si</p>
+                <p><span>example:</span> si</p>
+                <p><span>example:</span> si</p>
+              </div>
+              <p class="main__recipe-description">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
+                cum consectetur! Neque aliquid amet delectus laudantium itaque
+                suscipit, enim doloribus iusto praesentium voluptate
+                perspiciatis aspernatur quas dolorem placeat deleniti ex.
+              </p>
+            </div>
+          </figcaption>
+        </figure>
+        <figure class="main__recipe-card">
+          <div class="main__recipe-block-img">
+            <img
+              class="main__recipe-img"
+              src="./assets/images/fillRecipeImg.png"
+              alt="image of a recipe"
+            />
+          </div>
+          <figcaption class="main__recipe-caption">
+            <div class="main__recipe-titlextime">
+              <p>titre recette</p>
+              <div class="main__recipe-time">
+                <svg
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_4_71)">
+                    <path
+                      d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7H11V13L16.2 16.2L17 14.9L12.5 12.2V7Z"
+                      fill="black"
+                    />
+                  </g>
+                </svg>
+                <p>20 min</p>
+              </div>
+            </div>
+            <div class="main__recipe-ingredientsxdescription">
+              <div class="main__recipe-ingredients">
+                <p><span>example:</span> siaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                <p><span>example:</span> si</p>
+                <p><span>example:</span> si</p>
+                <p><span>example:</span> si</p>
+              </div>
+              <p class="main__recipe-description">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
+                cum consectetur! Neque aliquid amet delectus laudantium itaque
+                suscipit, enim doloribus iusto praesentium voluptate
+                perspiciatis aspernatur quas dolorem placeat deleniti ex.
+              </p>
+            </div>
+          </figcaption>
+        </figure>
+        <figure class="main__recipe-card">
+          <div class="main__recipe-block-img">
+            <img
+              class="main__recipe-img"
+              src="./assets/images/fillRecipeImg.png"
+              alt="image of a recipe"
+            />
+          </div>
+          <figcaption class="main__recipe-caption">
+            <div class="main__recipe-titlextime">
+              <p>titre recette</p>
+              <div class="main__recipe-time">
+                <svg
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_4_71)">
+                    <path
+                      d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7H11V13L16.2 16.2L17 14.9L12.5 12.2V7Z"
+                      fill="black"
+                    />
+                  </g>
+                </svg>
+                <p>20 min</p>
+              </div>
+            </div>
+            <div class="main__recipe-ingredientsxdescription">
+              <div class="main__recipe-ingredients">
+                <p><span>example:</span> siaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                <p><span>example:</span> si</p>
+                <p><span>example:</span> si</p>
+                <p><span>example:</span> si</p>
+              </div>
+              <p class="main__recipe-description">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
                 cum consectetur! Neque aliquid amet delectus laudantium itaque
                 suscipit, enim doloribus iusto praesentium voluptate
