Change "device" to "appliance" & add script index

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </div>
             </div>
           </div>
-          <div class="header__tag-selector" data-tag="device">
+          <div class="header__tag-selector" data-tag="appliance">
             <div class="header__tag-researcher">
               <p>Appareils</p>
               <input
@@ -366,5 +366,6 @@
         </figure>
       </div>
     </main>
+    <script type="module" src="scripts/index.js"></script>
   </body>
 </html>
