Clean up the "example" placed to make the style

--- a/index.html
+++ b/index.html
@@ -74,42 +74,7 @@
               </svg>
             </div>
             <div class="header__tag-choice--display">
-              <div class="header__tag-choice">
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-              </div>
+              <div class="header__tag-choice"></div>
             </div>
           </div>
           <div class="header__tag-selector" data-tag="appliance">
@@ -132,12 +97,7 @@
               </svg>
             </div>
             <div class="header__tag-choice--display">
-              <div class="header__tag-choice">
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-              </div>
+              <div class="header__tag-choice"></div>
             </div>
           </div>
           <div class="header__tag-selector" data-tag="ustensil">
@@ -160,39 +120,14 @@
               </svg>
             </div>
             <div class="header__tag-choice--display">
-              <div class="header__tag-choice">
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-                <p>Example</p>
-              </div>
+              <div class="header__tag-choice"></div>
             </div>
           </div>
         </div>
       </div>
     </header>
     <main>
-      <div class="main__block-recipe-cards">
-      </div>
+      <div class="main__block-recipe-cards"></div>
     </main>
     <script type="module" src="scripts/index.js"></script>
   </body>
