Delete tag selector to add them dynamically

--- a/index.html
+++ b/index.html
@@ -53,77 +53,7 @@
             </svg>
           </div>
         </div>
-        <div class="header__block-tag-selector">
-          <div class="header__tag-selector" data-tag="ingredient">
-            <div class="header__tag-researcher">
-              <p class="">Ingredients</p>
-              <input
-                class=""
-                type="text"
-                placeholder="Rechercher un ingrédient"
-                name="searchIngredient"
-              />
-              <svg
-                class=""
-                viewBox="0 0 16 11"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z"
-                />
-              </svg>
-            </div>
-            <div class="header__tag-choice--display">
-              <div class="header__tag-choice"></div>
-            </div>
-          </div>
-          <div class="header__tag-selector" data-tag="appliance">
-            <div class="header__tag-researcher">
-              <p>Appareils</p>
-              <input
-                type="text"
-                placeholder="Rechercher un appareil"
-                name="searchIngredient"
-              />
-              <svg
-                width="16"
-                height="11"
-                viewBox="0 0 16 11"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z"
-                />
-              </svg>
-            </div>
-            <div class="header__tag-choice--display">
-              <div class="header__tag-choice"></div>
-            </div>
-          </div>
-          <div class="header__tag-selector" data-tag="ustensil">
-            <div class="header__tag-researcher">
-              <p>Ustensiles</p>
-              <input
-                type="text"
-                placeholder="Rechercher un ustensile"
-                name="searchIngredient"
-              />
-              <svg
-                width="16"
-                height="11"
-                viewBox="0 0 16 11"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M14.12 0.453369L8 6.56004L1.88 0.453369L0 2.33337L8 10.3334L16 2.33337L14.12 0.453369Z"
-                />
-              </svg>
-            </div>
-            <div class="header__tag-choice--display">
-              <div class="header__tag-choice"></div>
-            </div>
-          </div>
-        </div>
+        <div class="header__block-tag-selector"></div>
       </div>
     </header>
     <main>
