--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         </form>
       </div>
       <div class="header__block-advanced-research">
-        <div class="header__block-tag">
-        </div>
+        <div class="header__block-tag"></div>
         <div class="header__block-tag-selector"></div>
       </div>
     </header>
